fix(model): resolve cache-control policy during message formatting