@@ -16,6 +16,7 @@
 package io.agentscope.extensions.model.dashscope.formatter;
 
 import io.agentscope.core.formatter.AbstractBaseFormatter;
+import io.agentscope.core.message.MessageMetadataKeys;
 import io.agentscope.core.message.Msg;
 import io.agentscope.core.model.ChatResponse;
 import io.agentscope.core.model.GenerateOptions;
@@ -29,10 +30,11 @@ import io.agentscope.extensions.model.dashscope.dto.DashScopeRequest;
 import io.agentscope.extensions.model.dashscope.dto.DashScopeResponse;
 import java.time.Instant;
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * Formatter for DashScope Conversation/Generation APIs.
@@ -44,14 +46,10 @@ import java.util.stream.Collectors;
 public class DashScopeChatFormatter
         extends AbstractBaseFormatter<DashScopeMessage, DashScopeResponse, DashScopeRequest> {
 
-    private static final Map<String, String> EPHEMERAL_CACHE_CONTROL = Map.of("type", "ephemeral");
+    private static final Logger log = LoggerFactory.getLogger(DashScopeChatFormatter.class);
 
-    /**
-     * Sentinel for an explicit "no marker" intent. An empty map is serialized away (via
-     * {@code @JsonInclude(NON_EMPTY)} on {@link DashScopeMessage#cacheControl}), so the upstream
-     * API receives no explicit {@code cache_control} marker.
-     */
-    private static final Map<String, String> NO_CACHE_CONTROL = Collections.emptyMap();
+    private static final Map<String, String> EPHEMERAL_CACHE_CONTROL = Map.of("type", "ephemeral");
+    private static final int MAX_CACHE_MARKERS = 4;
 
     private final DashScopeMessageConverter messageConverter;
     private final DashScopeResponseParser responseParser;
@@ -73,6 +71,21 @@ public class DashScopeChatFormatter
                 result.add(dsMsg);
             }
         }
+        return result;
+    }
+
+    @Override
+    protected List<DashScopeMessage> doFormat(List<Msg> msgs, GenerateOptions options) {
+        List<DashScopeMessage> result = new ArrayList<>();
+        List<Boolean> cacheDirectives = new ArrayList<>();
+        for (Msg msg : msgs) {
+            DashScopeMessage dsMsg = messageConverter.convertToMessage(msg, hasMediaContent(msg));
+            if (dsMsg != null) {
+                result.add(dsMsg);
+                cacheDirectives.add(cacheControlDirective(msg));
+            }
+        }
+        applyAutomaticCacheControl(result, cacheDirectives, options);
         return result;
     }
 
@@ -126,9 +139,27 @@ public class DashScopeChatFormatter
      * @return List of DashScopeMessage objects with multimodal content
      */
     public List<DashScopeMessage> formatMultiModal(List<Msg> messages) {
-        return messages.stream()
-                .map(msg -> messageConverter.convertToMessage(msg, true))
-                .collect(Collectors.toList());
+        return formatMultiModal(messages, null);
+    }
+
+    /**
+     * Format AgentScope Msg objects to DashScope MultiModal message format using request-scoped
+     * generation options.
+     *
+     * @param messages The AgentScope messages to convert
+     * @param options request-scoped generation options; may be {@code null}
+     * @return List of DashScopeMessage objects with multimodal content
+     */
+    public List<DashScopeMessage> formatMultiModal(List<Msg> messages, GenerateOptions options) {
+        List<DashScopeMessage> result = new ArrayList<>();
+        List<Boolean> cacheDirectives = new ArrayList<>();
+        for (Msg msg : messages) {
+            DashScopeMessage message = messageConverter.convertToMessage(msg, true);
+            result.add(message);
+            cacheDirectives.add(cacheControlDirective(msg));
+        }
+        applyAutomaticCacheControl(result, cacheDirectives, options);
+        return result;
     }
 
     /**
@@ -181,50 +212,14 @@ public class DashScopeChatFormatter
         return request;
     }
 
-    /**
-     * Apply cache control to DashScope messages.
-     *
-     * <p>Adds <code>cache_control: {"type": "ephemeral"}</code> to the last content part of all
-     * system messages and the last message in the list. Legacy message-level values are migrated to
-     * the last content part. Messages explicitly excluded from caching are left untouched.
-     *
-     * @param messages the list of formatted DashScope messages
-     */
-    public void applyCacheControl(List<DashScopeMessage> messages) {
-        applyCacheControlToMessages(messages);
-    }
-
-    static void applyCacheControlToMessages(List<DashScopeMessage> messages) {
-        if (messages == null || messages.isEmpty()) {
-            return;
-        }
-        for (DashScopeMessage msg : messages) {
-            migrateLegacyCacheControl(msg);
-        }
-        for (DashScopeMessage msg : messages) {
-            if ("system".equals(msg.getRole()) && shouldAutoCache(msg)) {
-                setCacheControlOnContent(msg, EPHEMERAL_CACHE_CONTROL);
-            }
-        }
-        DashScopeMessage lastMsg = messages.get(messages.size() - 1);
-        if (shouldAutoCache(lastMsg)) {
-            setCacheControlOnContent(lastMsg, EPHEMERAL_CACHE_CONTROL);
-        }
-    }
-
-    static void setCacheControlOnContent(
-            DashScopeMessage message, Map<String, String> cacheControl) {
+    static void setCacheControlOnContent(DashScopeMessage message) {
         DashScopeContentPart lastPart = getOrCreateLastContentPart(message);
-        if (lastPart != null && lastPart.getCacheControl() == null) {
-            lastPart.setCacheControl(cacheControl);
+        if (lastPart == null) {
+            throw new IllegalStateException(
+                    "Cannot place cache_control on a message without a content part");
         }
-        message.setCacheControl(null);
-    }
-
-    private static void migrateLegacyCacheControl(DashScopeMessage message) {
-        Map<String, String> legacyCacheControl = message.getCacheControl();
-        if (legacyCacheControl != null && !legacyCacheControl.isEmpty()) {
-            setCacheControlOnContent(message, legacyCacheControl);
+        if (lastPart.getCacheControl() == null) {
+            lastPart.setCacheControl(EPHEMERAL_CACHE_CONTROL);
         }
     }
 
@@ -234,12 +229,7 @@ public class DashScopeChatFormatter
             DashScopeContentPart textPart = DashScopeContentPart.text(text);
             message.setContent(List.of(textPart));
             return textPart;
-        }
-        return findLastContentPart(content);
-    }
-
-    private static DashScopeContentPart findLastContentPart(Object content) {
-        if (content instanceof List<?> parts) {
+        } else if (content instanceof List<?> parts) {
             for (int i = parts.size() - 1; i >= 0; i--) {
                 if (parts.get(i) instanceof DashScopeContentPart part) {
                     return part;
@@ -249,39 +239,74 @@ public class DashScopeChatFormatter
         return null;
     }
 
-    /**
-     * Get the ephemeral cache control constant.
-     *
-     * @return unmodifiable map representing ephemeral cache control
-     */
-    static Map<String, String> getEphemeralCacheControl() {
-        return EPHEMERAL_CACHE_CONTROL;
-    }
-
-    /**
-     * Get the "no marker" sentinel constant.
-     *
-     * @return unmodifiable empty map representing an explicit "no marker" intent
-     */
-    static Map<String, String> getNoCacheControl() {
-        return NO_CACHE_CONTROL;
-    }
-
-    /**
-     * Whether the automatic cache-control strategy should mark a message as ephemeral.
-     *
-     * <p>Returns {@code true} only when neither the legacy message-level state nor the last content
-     * part carries a cache-control value. The empty message-level "no marker" sentinel is therefore
-     * preserved across repeated automatic-strategy passes.
-     *
-     * @param message the message to inspect
-     * @return {@code true} if the message should be auto-cached, {@code false} otherwise
-     */
-    static boolean shouldAutoCache(DashScopeMessage message) {
-        if (message.getCacheControl() != null) {
-            return false;
+    static Boolean cacheControlDirective(Msg msg) {
+        if (msg == null || msg.getMetadata() == null) {
+            return null;
         }
-        DashScopeContentPart lastPart = findLastContentPart(message.getContent());
-        return lastPart == null || lastPart.getCacheControl() == null;
+        Object directive = msg.getMetadata().get(MessageMetadataKeys.CACHE_CONTROL);
+        return directive instanceof Boolean value ? value : null;
+    }
+
+    static void applyAutomaticCacheControl(
+            List<DashScopeMessage> messages, List<Boolean> directives, GenerateOptions options) {
+        if (messages == null
+                || messages.isEmpty()
+                || options == null
+                || !Boolean.TRUE.equals(options.getCacheControl())) {
+            return;
+        }
+        if (messages.size() != directives.size()) {
+            throw new IllegalStateException(
+                    "Cache-control directives do not match formatted messages");
+        }
+
+        int markerCount = countCacheMarkers(messages);
+        if (markerCount > MAX_CACHE_MARKERS) {
+            log.warn(
+                    "Request contains {} explicit cache_control markers; provider uses the last {};"
+                            + " skipping automatic markers",
+                    markerCount,
+                    MAX_CACHE_MARKERS);
+            return;
+        }
+
+        LinkedHashSet<Integer> candidates = new LinkedHashSet<>();
+        int lastIndex = messages.size() - 1;
+        if (shouldAutoCache(directives.get(lastIndex))) {
+            candidates.add(lastIndex);
+        }
+        for (int i = 0; i < messages.size(); i++) {
+            if ("system".equals(messages.get(i).getRole()) && shouldAutoCache(directives.get(i))) {
+                candidates.add(i);
+            }
+        }
+
+        for (Integer index : candidates) {
+            if (markerCount >= MAX_CACHE_MARKERS) {
+                break;
+            }
+            setCacheControlOnContent(messages.get(index));
+            markerCount++;
+        }
+    }
+
+    private static boolean shouldAutoCache(Boolean directive) {
+        return directive == null;
+    }
+
+    private static int countCacheMarkers(List<DashScopeMessage> messages) {
+        int count = 0;
+        for (DashScopeMessage message : messages) {
+            Object content = message.getContent();
+            if (content instanceof List<?> parts) {
+                for (Object part : parts) {
+                    if (part instanceof DashScopeContentPart contentPart
+                            && contentPart.getCacheControl() != null) {
+                        count++;
+                    }
+                }
+            }
+        }
+        return count;
     }
 }
